--- a/pkg/admin/gui/front_end/css/login_page.css
+++ b/pkg/admin/gui/front_end/css/login_page.css
@@ -27,3 +27,18 @@
   color: #434343 !important;
     transition: color 0.3s;
 }
+
+.error-animated {
+    animation: shake 0.5s ease-in-out;
+    border: 1px solid red;
+    border-radius: 17px;
+}
+
+@keyframes shake {
+  0% { transform: translateX(0); }
+  20% { transform: translateX(-1%); }
+  40% { transform: translateX(1%); }
+  60% { transform: translateX(-1%); }
+  80% { transform: translateX(1%); }
+  100% { transform: translateX(0); }
+}
