--- a/pkg/admin/gui/front_end/css/user_management_page.css
+++ b/pkg/admin/gui/front_end/css/user_management_page.css
@@ -1,1 +1,20 @@
-/* css */
+.btn-filter {
+  background: #f54b15;
+  color: #fff;
+  border: none;
+  border-radius: 17px;
+  padding: 0.375rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  appearance: none;
+  text-align: center;
+}
+
+.btn-filter:hover,
+.btn-filter:focus {
+  background: #fff;
+  color: #f54b15;
+  outline: none;
+  transition: background 0.2s, color 0.2s;
+  border-radius: 17px;
+}
