--- a/pkg/admin/gui/front_end/css/user_management_page.css
+++ b/pkg/admin/gui/front_end/css/user_management_page.css
@@ -58,3 +58,40 @@
 .navbar-user {
   border-radius: 17px !important;
 }
+
+.eye-button {
+  border-color: var(--bs-border-color) !important;
+  background-color: #fff;
+}
+
+.eye-button:hover {
+  background-color: rgb(162, 162, 162);
+}
+
+.eye-button i {
+  color: rgb(162, 162, 162);
+}
+
+.eye-button:hover i {
+  color: #fff !important;
+}
+
+.page-link {
+  color: black !important;
+}
+
+#autocomplete {
+    position: absolute;
+    top: 115%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+#autocomplete li:hover {
+    background-color: #f6f6f6;
+    cursor: pointer;
+}
+
+.ms-1-5 {
+    margin-left: 0.2rem;
+}
