feat/Partner Management Page finish (with last features: modal for each protoconfig, check box instead radio, select for algo ftps and versions tls)

--- a/pkg/admin/gui/front_end/css/partner_management_page.css
+++ b/pkg/admin/gui/front_end/css/partner_management_page.css
@@ -95,3 +95,12 @@
 .page-link {
   color: black !important;
 }
+
+select:has(option[value=""]:checked) {
+  color:#6c757d;
+}
+
+.btn-outline-info:hover, .btn-outline-info:focus,
+.btn-outline-warning:hover, .btn-outline-warning:focus {
+  color: #fff !important;
+}
