feat/add remote account management page complete

--- a/pkg/admin/gui/front_end/css/partner_management_page.css
+++ b/pkg/admin/gui/front_end/css/partner_management_page.css
@@ -104,3 +104,14 @@ select:has(option[value=""]:checked) {
 .btn-outline-warning:hover, .btn-outline-warning:focus {
   color: #fff !important;
 }
+
+.back-btn {
+  border-color: #f54b15;
+  color: #f54b15;
+  background-color: #fff;
+}
+
+.back-btn:hover {
+  background-color: #f54b15;
+  color: #fff;
+}
