--- a/pkg/admin/gui/front_end/css/user_management_page.css
+++ b/pkg/admin/gui/front_end/css/user_management_page.css
@@ -99,3 +99,14 @@
 .reset-btn {
   border-radius: 50px;
 }
+
+.back-btn {
+  border-color: #f54b15;
+  color: #f54b15;
+  background-color: #fff;
+}
+
+.back-btn:hover {
+  background-color: #f54b15;
+  color: #fff;
+} 
