feat/cleanup project

--- a/pkg/admin/gui/front-end/css/select.css
+++ b/pkg/admin/gui/front-end/css/select.css
@@ -18,3 +18,7 @@
   transition: background 0.2s, color 0.2s;
   border-radius: 13px;
 }
+
+select:has(option[value=""]:checked) {
+  color:#6c757d;
+}
