--- a/pkg/admin/gui/front-end/css/button.css
+++ b/pkg/admin/gui/front-end/css/button.css
@@ -1,3 +1,18 @@
+.btn-connexion {
+  background-color: #f54b15;
+  color: white;
+  border-radius: 13px;
+}
+
+.btn-connexion:hover,
+.btn-connexion:focus {
+  background-color: #fff;
+  color: #f54b15 !important;
+  transition: background 0.5s, color 1.0s;
+  border-radius: 13px;
+  box-shadow: 0 6px 18px rgba(200, 199, 199, 0.25);
+}
+
 .btn-navbar {
     background-color: #f54b15 !important;
     border-color: #f54b15 !important;
@@ -23,42 +38,6 @@
     color: #fff !important;
 }
 
-.modal-backdrop.show {
-  backdrop-filter: blur(10px);
-  opacity: 7;
-  background-color: rgba(0,0,0,0.1) !important;
-}
-
-.modal-body .form-input{
-    text-align:left;
-}
-
-.modal-body .title-perm {
-    text-align:left;
-}
-
-.modal-body .form-group{
-  display:flex;
-  align-items:center;
-}
-
-.modal-body .form-group label{
-  flex:0 0 40%;
-  text-align:left;
-}
-
-.modal-body .form-group .index-value {
-  flex:0 0 60%;
-}
-
-.table-outline {
-  border: 2px solid grey
-}
-
-.navbar-partner {
-  border-radius: 17px !important;
-}
-
 .protoConfig-btn {
   background-color: #f5f5f5 !important;
   border: 0.5px solid #ababab !important;
@@ -72,32 +51,8 @@
   color: #000000 !important;
 }
 
-#autocomplete {
-    position: absolute;
-    top: 115%;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-}
-
-#autocomplete li:hover {
-    background-color: #f6f6f6;
-    cursor: pointer;
-}
-
-.ms-1-5 {
-    margin-left: 0.2rem;
-}
-
 .reset-btn {
   border-radius: 50px;
-}
-
-.page-link {
-  color: black !important;
-}
-
-select:has(option[value=""]:checked) {
-  color:#6c757d;
 }
 
 .btn-outline-info:hover, .btn-outline-info:focus,
@@ -113,5 +68,22 @@ select:has(option[value=""]:checked) {
 
 .back-btn:hover {
   background-color: #f54b15 !important;
+  color: #fff !important;
+}
+
+.eye-button {
+  border-color: var(--bs-border-color) !important;
+  background-color: #fff;
+}
+
+.eye-button:hover {
+  background-color: rgb(162, 162, 162);
+}
+
+.eye-button i {
+  color: rgb(162, 162, 162);
+}
+
+.eye-button:hover i {
   color: #fff !important;
 }
