--- a/pkg/admin/gui/front-end/css/button.css
+++ b/pkg/admin/gui/front-end/css/button.css
@@ -38,21 +38,21 @@
     color: #fff !important;
 }
 
-.protoConfig-btn {
+.modal-btn {
   background-color: #f5f5f5 !important;
   border: 0.5px solid #ababab !important;
   color: #000000 !important;
   padding: 0.1rem 0.6rem;
 }
 
-.protoConfig-btn:hover {
+.modal-btn:hover {
   background-color: #e6e6e6 !important;
   border: 0.5px solid #ababab !important;
   color: #000000 !important;
 }
 
-.reset-btn {
-  border-radius: 50px;
+.reset-btn:hover {
+   background-color: #f5f5f5 !important;
 }
 
 .btn-outline-info:hover, .btn-outline-info:focus,
