feat/add first version of transfer monitoring (with minimum view of informations)

--- a/pkg/admin/gui/front-end/css/style.css
+++ b/pkg/admin/gui/front-end/css/style.css
@@ -78,3 +78,8 @@
 .opacity-25  {
     opacity: .25;
 }
+
+.bg-success-subtle {
+    background-color: #41c288 !important;
+    color: #19191a !important;
+}
