--- a/pkg/admin/gui/front-end/css/error-animated.css
+++ b/pkg/admin/gui/front-end/css/error-animated.css
@@ -3,3 +3,9 @@
     border: 1px solid red;
     border-radius: 13px;
 }
+
+.success-animated {
+    animation: shake 0.5s ease-in-out;
+    border: 1px solid green;
+    border-radius: 13px;
+}
