--- a/pkg/admin/gui/front-end/css/style.css
+++ b/pkg/admin/gui/front-end/css/style.css
@@ -9,6 +9,7 @@
 @import url('shake.css');
 @import url('table.css');
 @import url('error.css');
+@import url('sidebar.css');
 
 .ms-1-5 {
     margin-left: 0.2rem;
