feat/ add class sb-restoring to hide sidebar at the change of page

--- a/pkg/admin/gui/front-end/css/sidebar.css
+++ b/pkg/admin/gui/front-end/css/sidebar.css
@@ -110,3 +110,7 @@
 .sb-animate .btn-toggle::after {
   transition: transform .25s ease;
 }
+
+.sb-restoring #appSidebar {
+  visibility: hidden;
+}
