--- a/pkg/admin/gui/front-end/css/sidebar.css
+++ b/pkg/admin/gui/front-end/css/sidebar.css
@@ -30,7 +30,8 @@
 }
 
 .btn-toggle.current {
-  background-color: #e9ecef;
+  background-color: #f54b15 !important;
+  color: #fff !important;
 }
 
 .btn-toggle-nav a {
@@ -38,16 +39,19 @@
   padding: .1875rem .5rem;
   margin: .125rem 0 .125rem 1.25rem;
   text-decoration: none;
-  border-radius: .25rem;
+  border-radius: 13px;
   color: inherit;
 }
+
 .btn-toggle-nav a:hover, .btn-toggle-nav a:focus {
   background-color: #e9ecef;
 }
 
 .btn-toggle-nav .active {
   font-weight: 600;
-  background-color: #e9ecef;
+  background-color: #f54b15 !important;
+  color: #fff !important;
+  border-radius: 13px;
 }
 
 #sidebarCollapse[aria-expanded="true"] {
@@ -113,4 +117,77 @@
 
 .sb-restoring #appSidebar {
   visibility: hidden;
+}
+
+.sb-restoring .logo-waarp,
+.sb-restoring .doc-waarp {
+    display: none !important;
+}
+
+.sb-animate #appSidebar.show ~ .logo-waarp,
+.sb-animate #appSidebar.show ~ .doc-waarp {
+    transform: translateX(0);
+    pointer-events: auto;
+}
+
+.sb-restoring .logo-waarp,
+.sb-restoring .doc-waarp {
+    display: none !important;
+}
+
+.logo-waarp,
+.doc-waarp {
+    position: fixed;
+    z-index: 100;
+    pointer-events: none;
+    user-select: none;
+    transition: transform 0.15s, opacity 0.2s;
+    transform: translateX(calc(-100% - var(--sidebar-width)));
+}
+
+.logo-waarp {
+    left: 1.5rem;
+    bottom: 1rem;
+    width: 12rem;
+    height: auto;
+}
+
+.doc-waarp {
+    left: 15rem;
+    bottom: 2rem;
+    width: auto;
+    display: flex;
+    align-items: center;
+    font-size: 1.6rem;
+    color: #fff;
+    background-color: #f54b15;
+    border-radius: 13px;
+    padding: 0.2rem 0.6rem;
+    text-decoration: none;
+    pointer-events: none;
+    user-select: none;
+}
+
+.doc-waarp:hover,
+.doc-waarp:focus {
+  color: #f54b15;
+  background-color: #fff;
+  transition: background 0.5s, color 0.7s;
+  box-shadow: 0 6px 10px rgba(181, 181, 181, 0.25);
+}
+
+.btn-toggle:hover,
+.btn-toggle:focus {
+  background-color: #f54b15 !important;
+  color: #fff !important;
+}
+
+.btn-toggle-nav a:hover,
+.btn-toggle-nav a:focus {
+  background-color: #f54b15 !important;
+  color: #fff !important;
+}
+
+.btn-toggle.current::after {
+  filter: invert(1);
 }
