--- a/pkg/admin/gui/v2/frontend/sidebar/sidebar.gohtml
+++ b/pkg/admin/gui/v2/frontend/sidebar/sidebar.gohtml
@@ -8,7 +8,7 @@
 <div id="app-sidebar" class="collapse collapse-horizontal show">
     <div class="sidebar-content">
         <nav class="sidebar-menu">
-            {{ if or .UserRights.Rules.CanRead .UserRights.Partners.CanRead .UserRights.Admin.CanRead}}
+            {{ if or .UserRights.Servers.CanRead .UserRights.Partners.CanRead }}
             <div>
                 <button class="btn btn-toggle sidebar-category {{ if eq .ActiveSection `connection` }}active{{ end }}"
                         id="sidebarButtonConnection"
@@ -47,15 +47,6 @@
                             <a class="sidebar-menu-text {{ if eq .ActiveMenu `partners` }}active{{ end }}"
                                href="partner_management">
                                 {{ .Text.manageRemotePartners }}
-                            </a>
-                        </li>
-                        {{ end }}
-                        {{ if .UserRights.Admin.CanRead }}
-                        <li>
-                            <i class="bi bi-cloud-fill"></i>
-                            <a class="sidebar-menu-text {{ if eq .ActiveMenu `clouds` }}active{{ end }}"
-                               href="cloud_instance_management">
-                                {{ .Text.manageCloudInstances }}
                             </a>
                         </li>
                         {{ end }}
@@ -148,19 +139,9 @@
                             </a>
                         </li>
                         {{ end }}
-                        {{ if .UserRights.Admin.CanRead }}
-                        <li>
-                            <i class="bi bi-diagram-3-fill"></i>
-                            <a class="sidebar-menu-text {{ if eq .ActiveMenu `snmp` }}active{{ end }}"
-                               href="snmp_management">
-                                {{ .Text.manageSNMP }}
-                            </a>
-                        </li>
-                        {{ end }}
                     </ul>
                 </div>
             </div>
-            {{ if .UserRights.Admin.CanRead }}
             <div>
                 <button class="btn btn-toggle sidebar-category {{ if eq .ActiveSection `admin` }}active{{ end }}"
                         id="sidebarButtonAdmin"
@@ -175,7 +156,6 @@
                      id="sidebarSectionAdmin"
                      data-force-open="true">
                     <ul>
-                        {{ if .UserRights.Users.CanRead }}
                         <li>
                             <i class="bi bi-person-fill"></i>
                             <a class="sidebar-menu-text {{ if eq .ActiveMenu `users` }}active{{ end }}"
@@ -183,7 +163,6 @@
                                 {{ .Text.manageUsers }}
                             </a>
                         </li>
-                        {{ end }}
                         {{ if .UserRights.Admin.CanRead }}
                         <li>
                             <i class="bi bi-shield-lock-fill"></i>
@@ -192,8 +171,20 @@
                                 {{ .Text.manageAuthorities }}
                             </a>
                         </li>
-                        {{ end }}
-                        {{ if .UserRights.Admin.CanRead }}
+                        <li>
+                            <i class="bi bi-cloud-fill"></i>
+                            <a class="sidebar-menu-text {{ if eq .ActiveMenu `clouds` }}active{{ end }}"
+                               href="cloud_instance_management">
+                                {{ .Text.manageCloudInstances }}
+                            </a>
+                        </li>
+                        <li>
+                            <i class="bi bi-diagram-3-fill"></i>
+                            <a class="sidebar-menu-text {{ if eq .ActiveMenu `snmp` }}active{{ end }}"
+                               href="snmp_management">
+                                {{ .Text.manageSNMP }}
+                            </a>
+                        </li>
                         <li>
                             <i class="bi bi-sliders"></i>
                             <a class="sidebar-menu-text {{ if eq .ActiveMenu `overrides` }}active{{ end }}"
@@ -205,7 +196,6 @@
                     </ul>
                 </div>
             </div>
-            {{ end }}
         </nav>
         <div class="sidebar-footer">
             <img src="static_v2/assets/banner.png" alt="Waarp Banner" class="waarp-banner">
