fix: Minor WebUI fixes

--- a/pkg/admin/gui/v2/frontend/tasks/exec/exec.gohtml
+++ b/pkg/admin/gui/v2/frontend/tasks/exec/exec.gohtml
@@ -39,6 +39,7 @@
     "fieldName" "args"
     "fieldType" "text"
     "value" .Task.Args.args
+    "optional" "true"
 }}
 
 <!-- Delay input fields group -->
